<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/ufs_backgound"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="294dp"
        android:src="@mipmap/ufs_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="studentNumber"
            android:hint="@string/student"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        app:boxStrokeColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetBottom="0dp"
        android:text="@string/login"
        android:textColor="#C5E1A5"
        android:backgroundTint="@color/material_dynamic_secondary10"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
